<resources>
    <string name="app_name">Friend Alert 2.0</string>
    <string name="no_contact_date">Never contacted</string>
    <string name="request_contacts_permission">This app requires access to contacts to function. Please grant the permission.</string>
    <string name="ask_again">Ask Again</string>
    <string name="denied_contacts_permission">This app requires access to contacts to function. You\'ve chosen to deny this permission permanently, please enable it from app settings.</string>
    <string name="open_android_settings">Open Settings</string>
    <string name="exit">Exit</string>
    <string name="add_contact">Add contact</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="months">Months</string>
    <string name="years">Years</string>
    <string name="save">Save</string>
    <string name="never_contact">Never</string>
    <string name="note">Note</string>
    <string name="search">Search Contacts</string>
    <string name="export_contacts_title">Export Contacts to CSV</string>
    <string name="import_contacts_title">Import additional Contacts from CSV</string>
    <string name="export_import_header">Data Export and Backup</string>
    <string name="frequency_settings_header">Global Notification Settings</string>
    <string name="standard_frequency">Frequent Frequency</string>
    <string name="occasional_frequency">Occasional Frequency</string>
    <string name="rare_frequency">Rare Frequency</string>
    <string name="frequency_hint">Intervall in Days</string>
    <string name="frequency_hint_no_unit">Enter Frequency</string>
    <string name="last_contacted_label">Last Contacted:</string>
    <string name="recurring_frequency_label">Contact Intervall:</string>
    <string name="frequency_mode_standard">Standard</string>
    <string name="frequency_mode_custom">Custom</string>
    <string name="standard_frequency_mode">Frequent</string>
    <string name="occasional_frequency_mode">Occasional</string>
    <string name="rare_frequency_mode">Rare</string>
</resources>