<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="contact"
            type="xyz.mycompany.friendalert.models.ContactEntity" />

        <import type="android.view.View" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarTheme"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/contactImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                app:imageUri="@{contact.photoUri}"
                app:placeholder="@{@drawable/ic_person_24}"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/contactName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@{contact.contactName}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                tools:text="John Doe" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Last Contact:"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/datePicker"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="Last Contact Date"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dateLabel">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dateEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:inputType="date" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/frequencyLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="Contact Frequency:"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/toggleGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frequencyLabel"
                    app:singleSelection="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/basicMode"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="Basic"
                        app:cornerRadius="0dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/advancedMode"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="Advanced"
                        app:cornerRadius="0dp" />
                </com.google.android.material.button.MaterialButtonToggleGroup>

                <LinearLayout
                    android:id="@+id/basicFrequencyLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/toggleGroup">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/basicFrequencyChipGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:singleSelection="true"
                        tools:visibility="visible">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/frequentFriend"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:tag="30"
                            android:text="Frequent" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/occasionalFriend"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:tag="150"
                            android:text="Occasional" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/rareFriend"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:tag="300"
                            android:text="Rare" />

                    </com.google.android.material.chip.ChipGroup>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/advancedFrequencyLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/toggleGroup">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/frequencyText"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:hint="Enter frequency"
                        app:hintEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/frequencyEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/frequencyUnitGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/neverChip"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="72dp"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:checked="true"
                            android:text="@string/never_contact"
                            android:textAlignment="center" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/daysChip"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="72dp"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/days"
                            android:textAlignment="center" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/weeksChip"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="72dp"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/weeks"
                            android:textAlignment="center" />


                        <com.google.android.material.chip.Chip
                            android:id="@+id/monthsChip"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="72dp"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/months"
                            android:textAlignment="center" />
                    </com.google.android.material.chip.ChipGroup>
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/saveButton"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="32dp"
                    android:text="@string/save" />


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:visibility="@{!contact.notes.isEmpty() ? View.VISIBLE : View.INVISIBLE}"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/noteLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Notes:"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                        <com.google.android.material.textfield.TextInputLayout 
                            android:id="@+id/noteInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:endIconMode="none"
                            android:hint="Add notes (Optional)">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/noteEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textMultiLine" 
                                android:lines="4"/>
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </ScrollView>

    </LinearLayout>

</layout>
